Changing templates files

--- a/templates/status-messages.html.twig
+++ b/templates/status-messages.html.twig
@@ -24,7 +24,7 @@
 #}
 {% block messages %}
   {% if message_list is not empty %}
-    {{ attach_library('bartik/messages') }}
+    {{ attach_library('bs4bartik/messages') }}
     <div class="messages__wrapper layout-container">
       {{ parent() }}
     </div>
