--- a/templates/field--node--field-tags.html.twig
+++ b/templates/field--node--field-tags.html.twig
@@ -18,7 +18,7 @@
  * - label_display: The display settings for the label.
  *
  * @see template_preprocess_field()
- * @see bartik_preprocess_field()
+ * @see bs4bartik_preprocess_field()
  */
 #}
 {%
