--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -52,7 +52,7 @@
  * - page.breadcrumb: Items for the breadcrumb region.
  *
  * @see template_preprocess_page()
- * @see bartik_preprocess_page()
+ * @see bs4bartik_preprocess_page()
  * @see html.html.twig
  */
 #}
